--- a/emacs/config.org
+++ b/emacs/config.org
@@ -30,24 +30,25 @@ Install use-package and enable ':ensure t' globally.  The ':ensure' keyword caus
 ** Evil Mode
 Enable Vim
 #+begin_src emacs-lisp :tangle ~/.config/emacs/config.el
-(use-package evil
-  :init      ;; tweak evil's configuration before loading it
-  (setq evil-want-integration t) ;; This is optional since it's already set to t by default.
-  (setq evil-want-keybinding nil)
-  (setq evil-vsplit-window-right t)
-  (setq evil-split-window-below t)
-  (evil-mode))
-(use-package evil-collection ;; adds vim everywhere
-  :after evil
-  :config
-  (setq evil-collection-mode-list '(dashboard dired ibuffer))
-  (evil-collection-init))
-(require 'undo-tree)
-(global-undo-tree-mode)
-(evil-set-undo-system 'undo-tree)
-(use-package key-chord)
-(key-chord-mode 1)
-(key-chord-define evil-insert-state-map  "jk" 'evil-normal-state)
+  (use-package evil
+    :init      ;; tweak evil's configuration before loading it
+    (setq evil-want-integration t) ;; This is optional since it's already set to t by default.
+    (setq evil-want-keybinding nil)
+    (setq evil-vsplit-window-right t)
+    (setq evil-split-window-below t)
+    (evil-mode))
+  (use-package evil-collection ;; adds vim everywhere
+    :after evil
+    :config
+    (setq evil-collection-mode-list '(dashboard dired ibuffer))
+    (evil-collection-init))
+  (require 'undo-tree)
+  (global-undo-tree-mode)
+  (evil-set-undo-system 'undo-tree)
+  (use-package key-chord
+  :ensure t)
+  (key-chord-mode 1)
+  (key-chord-define evil-insert-state-map  "jk" 'evil-normal-state)
 #+end_src
 
 ** General Keybindings
@@ -221,23 +222,22 @@ Dashboard when starting Emacs, looks cool
 ** Configuring Dashboard
 
 #+begin_src emacs-lisp :tangle ~/.config/emacs/config.el
-(use-package dashboard
-  :init      ;; tweak dashboard config before loading it
-  (setq dashboard-set-heading-icons t)
-  (setq dashboard-set-file-icons t)
-  ;;(setq dashboard-banner-logo-title "Emacs: Sweaty Virgin Editor")
-  ;;(setq dashboard-startup-banner 'logo) ;; use standard emacs logo as banner
-  (setq dashboard-startup-banner "~/.config/emacs/emacs-dash.png")  ;; use custom image as banner
-  (setq dashboard-center-content nil) ;; set to 't' for centered content
-  (setq dashboard-items '((recents . 5)
-                          (agenda . 5 )
-                          (bookmarks . 3)
-                          (projects . 3)
-                          (registers . 3)))
-  :config
-  (dashboard-setup-startup-hook)
-  (dashboard-modify-heading-icons '((recents . "file-text")
-			      (bookmarks . "book"))))
+      (use-package dashboard
+	:init      ;; tweak dashboard config before loading it
+	(setq dashboard-set-heading-icons t)
+	(setq dashboard-set-file-icons t)
+	;;(setq dashboard-banner-logo-title "Emacs: Sweaty Virgin Editor")
+	;;(setq dashboard-startup-banner 'logo) ;; use standard emacs logo as banner
+	(setq dashboard-startup-banner "~/.config/emacs/emacs-dash.png")  ;; use custom image as banner
+	(setq dashboard-center-content nil) ;; set to 't' for centered content
+	(setq dashboard-items '((recents . 5)
+				(agenda . 5)
+				(bookmarks . 5)
+				(projects . 3)))
+	:config
+	(dashboard-setup-startup-hook)
+	(dashboard-modify-heading-icons '((recents . "file-text")
+				    (bookmarks . "book"))))
 #+end_src
 
 ** Dashboard in Emacsclient
@@ -511,7 +511,6 @@ broken up across LSP and DAP features.
 ** C++
 *** LSP + Comfort Settings
 #+begin_src emacs-lisp :tangle ~/.config/emacs/config.el
-(require 'modern-cpp-font-lock) ;; Syntax Highlighting
 (require 'clang-format+) ;; Auto formatting
 
 (c-add-style "my-style" 
@@ -591,7 +590,7 @@ broken up across LSP and DAP features.
 (add-hook 'python-mode 'tree-sitter-hl-mode)
 #+end_src
 *** Jupyter Notebooks
-#+begin_src emacs-lisp :tangle ~/.config/emacs/config.el
++begin_src emacs-lisp :tangle ~/.config/emacs/config.el
 (require 'ein)
 (setq ein:use-auto-complete t)
 (setq ein:use-smartrep t)
@@ -1171,13 +1170,13 @@ Handy for Spanish
 
 ** Prayer Times
 To integrate Islamic prayer times into Emacs, we have to manually add the package since it isn't on melpa
-#+begin_src emacs-lisp :tangle ~/.config/emacs/config.el
++begin_src emacs-lisp :tangle ~/.config/emacs/config.el
 (add-to-list 'load-path "~/.config/emacs/lisp/")
 (load "awqat.el") 
 #+end_src
 
 Next, we have to set some variables for our config
-#+begin_src emacs-lisp :tangle ~/.config/emacs/config.el
++begin_src emacs-lisp :tangle ~/.config/emacs/config.el
 (require 'awqat)
 (setq calendar-latitude 40.812119
     calendar-longitude -73.3432)
